--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/Magic-Gif-Ball/Magic-Gif-Ball/issues"
   },
-  "homepage": "https://github.com/Magic-Gif-Ball/Magic-Gif-Ball#readme"
+  "homepage": "https://github.com/Magic-Gif-Ball/Magic-Gif-Ball#readme",
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
+    "express": "^4.16.2",
+    "pg": "^7.4.1"
+  }
 }
