--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "giphy-js-sdk-core": "^1.0.3",
     "pg": "^7.4.1"
   }
 }
